Require OpenGL 2.0 in the SceneOpenGL2 constructor

BUG: 340254
FIXED-IN: 5.1.2